--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=60", "setuptools-scm>=8.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "ObservationLibrary"
+name = "observation_library"
 version = "0.0.1"
 dependencies = ["numpy>=2.0", "pandas", "ipyvuetify"]
 
