--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
 
 [tool.pyright]
 venvPath = "/home/paul/miniforge3/envs"
-venv = "automated-scoring"
+venv = "vassi"
 
 [tool.ruff.lint]
 ignore = ["D100", "D101", "D102", "D103", "D104", "D105"]
