--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "imageio[ffmpeg]",
     "interactive-table @ git+https://github.com/pnuehrenberg/interactive-table.git",
 ]
+requires-python = ">=3.12"
 
 [tool.pyright]
 venvPath = "/home/paul/miniforge3/envs"
